add structure components

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,7 @@
-.footer{
+.footer {
   height: 115px;
   display: table;
   width: 100%;
   font-size: 13px;
   text-align: center;
-  background-color: #ff5959;
-}
+  background-color: #ff5959; }
