--- a/src/components/news/news.css
+++ b/src/components/news/news.css
@@ -1,6 +1,3 @@
-.news {
-<<<<<<< HEAD
-  color: red; }
-=======
-  background-color: #ff5959; }
->>>>>>> local
+
+
+/*# sourceMappingURL=news.css.map */
