--- a/src/components/services/servises.scss
+++ b/src/components/services/servises.scss
@@ -1,3 +1,57 @@
-.services {
-  background-color: lightgray;
+.serviceTitle {;
+  display: block;
+  position: relative;
+  font-family: Quicksand, sans-serif;
+  line-height: 20px;
+  text-align: center;
+  margin: 50px 0 70px 0;;
+  font-size: 36px;
+  font-weight: 500;
+
+  &:after{
+    position: absolute;
+    content: '';
+    background: url('./blackLine.png') no-repeat;
+    width: 100%;
+    height: 10px;
+    top: 35px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-position: center bottom;
+  }
+}
+
+.rowInfo {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 300px;
+  justify-content: space-around;
+}
+
+.baseInfoItems {
+  text-align: center;
+  padding: 15px;
+}
+
+
+.optimizationTitle {;
+  color: rgb(51, 51, 51);
+  display: block;
+  font-family: Quicksand, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 15.4px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.basicInfoDescription {
+  box-sizing: border-box;
+  color: rgb(51, 51, 51);
+  display: block;
+  font-family: Quicksand, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
