--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -1,3 +1,43 @@
+.teamTitle {;
+  display: block;
+  position: relative;
+  font-family: Quicksand, sans-serif;
+  line-height: 20px;
+  text-align: center;
+  margin: 50px 0 70px 0;;
+  font-size: 36px;
+  font-weight: 500;
+
+  &:after{
+    position: absolute;
+    content: '';
+    background: url('./blackLine.png') no-repeat;
+    width: 100%;
+    height: 10px;
+    top: 35px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-position: center bottom;
+  }
+}
+
+
+
+
+.rowTeam {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 300px;
+  justify-content: space-around;
+
+}
+
+.founder {
+  text-align: center;
+  padding: 15px;
+}
+
 .founderImg {
   width: 100%;
   height: auto;
@@ -5,4 +45,52 @@
   max-height: 270px;
   border-radius: 50%;
   border: 4px solid red;
+  align-items: center;
+}
+
+.founderName {
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: #333;
+}
+
+.founderPosition {;
+  color: rgb(51, 51, 51);
+  display: block;
+  font-family: Quicksand, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 15.4px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.founderDescription {
+  box-sizing: border-box;
+  color: rgb(51, 51, 51);
+  display: block;
+  font-family: Quicksand, sans-serif;
+  font-size: 14px;
+
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.socialIcons {;
+  color: rgb(51, 51, 51);
+  display: block;
+  font-family: Quicksand, sans-serif;
+  font-size: 14px;
+  height: 24px;
+  line-height: 20px;
+  padding-top: 0px;
+  text-align: center;
+}
+
+.socialIcons a {
+  margin: 0 5px;
 }
