--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -23,13 +23,13 @@
     line-height: 20px;
     padding-top: 10px;
     padding-bottom: 10px; } }
-.navbar-default .navbar-brand, .navbar-brand:hover {
-  color: white !important; }
+.logo__section, .logo__section:hover {
+  color: white; }
 
 .navbar-default .navbar-nav > li > a {
   color: white; }
 
-.navbar h1 {
+.navbar h3 {
   font-weight: 400;
   font-size: 34px;
   display: inline-block;
@@ -37,7 +37,7 @@
   margin-top: 0px !important;
   padding-top: 0px; }
 
-.navbar-brand {
+.logo__section {
   padding: 0px 15px; }
 
 .navbarh1:hover {
