--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -34,9 +34,8 @@
     padding-bottom: 10px;}
 }
 
-.navbar-default .navbar-brand, .navbar-brand:hover
-{
-  color: white !important;
+.logo__section, .logo__section:hover {
+  color: white ;
 }
 
 .navbar-default .navbar-nav>li>a
@@ -44,7 +43,7 @@
   color: white;
 }
 
-.navbar h1
+.navbar h3
 {
   font-weight: 400;
   font-size: 34px;
@@ -54,8 +53,7 @@
   padding-top: 0px;
 }
 
-.navbar-brand
-{
+.logo__section{
   padding: 0px 15px;
 }
 
