--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -20,15 +20,25 @@
   margin-top: 10px; }
 
 .logo__section {
-  display: flex;
-  flex-direction: column;
   align-items: flex-start;
-  align-content: center;
   justify-content: center;
-  overflow: auto; }
+  overflow: auto;
+  margin: 20px; }
+
+.logo__wrap__desc {
+  text-align: left;
+  padding: 0 10px;
+  display: flex; }
 
 .logo {
   padding: 20px 0 0 0; }
+
+.logo__title {
+  padding: 5px 0 0 10px; }
+
+.logo-sub__title {
+  margin: 0;
+  padding: 0 0; }
 
 .header {
   background-color: #ff5959; }
@@ -71,3 +81,5 @@ nav a.open:hover {
 
 .logo__section {
   padding: 0 15px; }
+
+/*# sourceMappingURL=header.css.map */
