--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -5,7 +5,7 @@
 
 .blockHero {
   width: 100%;
-  height: 750px;
+  height: auto;
   top: 0;
   left: 0;
   display: flex;
@@ -38,7 +38,7 @@
   left: 0;
   display: flex;
   flex-wrap: wrap;
-  flex: 1 1 300px;
+  flex: 1 1 400px;
   align-items: center;
   align-content: center;
   justify-content: center;
@@ -78,3 +78,5 @@
   text-decoration: none;
   color: white;
   background-color: #ff5959; }
+
+/*# sourceMappingURL=hero.css.map */
