--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -5,7 +5,7 @@
 }
 .blockHero {
   width: 100%;
-  height: 750px;
+  height: auto;
   top: 0;
   left: 0;
   display: flex;
@@ -38,12 +38,17 @@
   left: 0;
   display: flex;
   flex-wrap: wrap;
-  flex: 1 1 300px;
+  flex: 1 1 400px;
   align-items: center;
   align-content: center;
   justify-content: center;
   overflow: auto;
+  padding: 100px 0 100px 0;
+  @media (max-width: 550px){
+    padding: 50px 0;
+  }
 }
+
 
 .filledButton {
   background-color: #ff5959;
