--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,12 +4,13 @@
   background-color: darkgray;
   top: 0;
   left: 0;
-  color: #e8e8e8; }
-
-.textBlock {
-  margin-left: 30px;
+  color: #e8e8e8;
   font-family: "Quicksand-Bold";
   font-weight: bold; }
+
+.textBlock {
+  width: 100%;
+  margin-left: 30px; }
 
 .footerLogo {
   display: flex; }
@@ -22,7 +23,21 @@
   height: 115px;
   margin-left: 30px;
   display: flex;
+  flex-direction: row;
   align-items: center;
   align-content: center;
   justify-content: flex-start;
   overflow: auto; }
+
+.text {
+  color: gray;
+  display: flex;
+  justify-content: flex-end; }
+
+.block {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 300px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; }
