--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,7 +5,7 @@
   left: 0;
   display: flex;
   flex-wrap: wrap;
-  flex: 1 1 250px;
+  flex: 1 1 300px;
   flex-direction: row;
   align-items: center;
   align-content: center;
@@ -41,7 +41,7 @@
   padding: 0 0; }
 
 .header {
-  background-color: #ff5959; }
+  background-color: #fc7d7d; }
 
 h2 {
   margin: 5px 0 5px 0;
@@ -80,7 +80,7 @@ span.logo {
 
 nav a:hover {
   color: white !important;
-  background-color: #fc7d7d !important; }
+  background-color: #ff5959 !important; }
 
 .logo__section {
   padding: 0 15px; }
