--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -26,7 +26,7 @@
   justify-content: space-around; }
 
 .founder {
-  width: 20%;
+  max-width: 200px;
   text-align: center;
   padding: 15px;
   margin-bottom: 30px; }
@@ -37,7 +37,7 @@
   max-width: 270px;
   max-height: 270px;
   border-radius: 50%;
-  border: 4px solid red;
+  border: 4px solid #fc7d7d;
   align-items: center; }
 
 .founderName {
@@ -75,7 +75,7 @@
   font-size: 14px;
   height: 24px;
   line-height: 20px;
-  padding-top: 0px;
+  padding-top: 0;
   text-align: center; }
 
 .socialIcons a {
