--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -30,7 +30,7 @@
 }
 
 .founder {
-  width: 20%;
+  max-width: 200px;
   text-align: center;
   padding: 15px;
   margin-bottom: 30px;
@@ -42,7 +42,7 @@
   max-width: 270px;
   max-height: 270px;
   border-radius: 50%;
-  border: 4px solid red;
+  border: 4px solid #fc7d7d;
   align-items: center;
 }
 
@@ -73,7 +73,6 @@
   display: block;
   font-family: Quicksand, sans-serif;
   font-size: 14px;
-
   line-height: 20px;
   margin-bottom: 10px;
 }
@@ -85,7 +84,7 @@
   font-size: 14px;
   height: 24px;
   line-height: 20px;
-  padding-top: 0px;
+  padding-top: 0;
   text-align: center;
 }
 .socialIcons a {
