--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,21 +4,25 @@
   background-color: darkgray;
   top: 0;
   left: 0;
-  color: rgb(232,232,232);
+  color: rgb(232, 232, 232);
   font-family: "Quicksand-Bold";
   font-weight: bold;
 }
+
 .textBlock {
   width: 100%;
   margin-left: 30px;
 }
+
 .footerLogo {
   display: flex;
 }
+
 .footerLogo img.App-logo {
   margin: 0;
   padding: 5px;
 }
+
 .footerBlock {
   height: 115px;
   margin-left: 30px;
@@ -30,11 +34,13 @@
   justify-content: flex-start;
   overflow: auto;
 }
+
 .text {
   color: gray;
   display: flex;
   justify-content: flex-end;
 }
+
 .block {
   display: flex;
   flex-wrap: wrap;
