--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,10 +1,10 @@
 .contact {
   height: auto;
   width: 100%;
-  padding-bottom: 30px;
+  padding:0 10px 30px;
 }
 
-.contactTitle {;
+.contactTitle {
   display: block;
   position: relative;
   font-family: Quicksand, sans-serif;
@@ -13,6 +13,7 @@
   margin: 50px 0 70px 0;;
   font-size: 36px;
   font-weight: 500;
+  color: #222222;
 
   &:after {
     position: absolute;
@@ -41,10 +42,12 @@
 }
 
 .blockForm {
+  width: 100%;
   max-width: 500px;
 }
 
 .blockContactInfo {
+  width: 100%;
   max-width: 500px;
   margin: 0 15px 0 5px;
 }
@@ -55,18 +58,22 @@ input {
   padding: 15px 0 15px 5px;
   font-size: 18px;
   border: none;
+  max-width: 550px;
   border-radius: 10px;
   outline: none;
+  font-family: Quicksand, sans-serif;
 }
 
 textarea {
   width: 100%;
+  max-width: 550px;
   margin: 5px 10px 5px 0;
   padding: 15px 0 15px 5px;
   resize: none;
   border: none;
   border-radius: 10px;
   font-size: 18px;
+  font-family: Quicksand, sans-serif;
   outline: none;
 }
 
@@ -129,4 +136,14 @@ img.arrowImg {
   padding: 0 10px 0 0;
 }
 
+
+@media (max-width: 550px) {
+  .arrowImg{
+    display: none;
+  }
+  .blockForm{
+    width: 85%;
+  }
+
+}
 
