--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,10 +8,13 @@
   font-family: "Quicksand-Bold";
   font-weight: bold;
 }
-
+.footer__section{
+  padding: 0 0 0 30px;
+}
 .textBlock {
   width: 100%;
-  margin-left: 30px;
+  padding: 0 0 0 30px;
+  margin: auto;
 }
 
 .footerLogo {
@@ -24,21 +27,22 @@
 }
 
 .footerBlock {
-  height: 115px;
-  margin-left: 30px;
+  padding: 30px 0;
   display: flex;
-
-  flex-direction: row;
   align-items: center;
   align-content: center;
   justify-content: flex-start;
-  overflow: auto;
+  flex-wrap: wrap;
+
 }
 
 .text {
   color: gray;
   display: flex;
   justify-content: flex-end;
+  flex:1 1 250px;
+  width: 80%;
+  padding: 0 30px;
 }
 
 .block {
@@ -48,4 +52,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+.wrap-content{
+  display: flex;
+
+}
+@media (max-width: 750px){
+  .text{
+    justify-content:center;
+  }
 }
