--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -83,9 +83,7 @@ nav a:hover {
 .logo__section {
   padding: 0 15px; }
 
-@media screen and (max-width: 750px) {
-  .heroTitle {
-    font-size: 45px; }
+@media (max-width: 820px) {
   .nav {
     justify-content: center; }
   .nav a {
