--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,5 @@
+
+
 .App-header {
   height: auto;
   text-align: center;
@@ -101,10 +103,7 @@ nav a:hover {
   padding: 0 15px;
 }
 
-@media screen and (max-width: 750px) {
-  .heroTitle {
-    font-size: 45px;
-  }
+@media (max-width: 820px) {
   .nav {
     justify-content: center;
   }
