--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -6,14 +6,12 @@
 .blockHero {
   width: 100%;
   height: auto;
-  top: 0;
-  left: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   align-content: center;
   justify-content: space-around;
-  overflow: auto; }
+  padding: 0 10px; }
 
 .heroTitle {
   font-family: 'Droid Sans', sans-serif;
@@ -89,6 +87,12 @@
   background-color: #fc7d7d; }
 
 @media (max-width: 550px) {
+  .heroTitle {
+    font-size: 45px; }
+  .heroSubTitle {
+    font-size: 25px; }
+  .heroContent {
+    font-size: 18px; }
   .rowInfo {
     padding: 50px 0; }
   .rowImg img {
