--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -7,14 +7,12 @@
 .blockHero {
   width: 100%;
   height: auto;
-  top: 0;
-  left: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   align-content: center;
   justify-content: space-around;
-  overflow: auto;
+  padding: 0 10px;
 }
 
 .heroTitle {
@@ -106,6 +104,16 @@
 }
 
 @media (max-width: 550px) {
+
+  .heroTitle {
+    font-size: 45px;
+  }
+  .heroSubTitle {
+    font-size: 25px;
+  }
+  .heroContent {
+    font-size: 18px;
+  }
   .rowInfo {
     padding: 50px 0;
   }
