--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,9 @@
+.portfolio {
+  background-color: #fc7d7d;
+  padding: 0 10px;
+}
+
+
 .portfolioTitle {
   display: block;
   position: relative;
@@ -37,9 +43,6 @@
   justify-content: space-around;
 }
 
-.portfolio {
-  background-color: #fc7d7d;
-}
 
 .animation {
   display: table;
@@ -52,20 +55,25 @@
   width: 100%;
   font-size: 18px;
   text-align: center;
-  top: 0;
-  left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
   justify-content: center;
-  overflow: auto;
+
 }
 
-h3 {
-  display: block;
-  margin: 5px 0 5px 0;
-  position: relative;
+.blockImg {
+  padding: 10px 0 10px 0;
+}
+
+div.portfolio3 {
+  margin: 40px -40px 40px 0;
+}
+
+.portfolio h3 {
+  font-size: 24px;
+  font-weight: 700;
 
   &:before {
     position: absolute;
@@ -102,26 +110,17 @@ h3 {
   }
 }
 
-.blockImg {
-  padding: 10px 0 10px 0;
-}
-
-div.portfolio3 {
-  margin: 40px -40px 40px 0;
-}
-
-.portfolio h3 {
-  font-size: 24px;
-  font-weight: 700;
-}
-
 .portfolio1 {
   width: 558px;
   height: 278px;
-  max-width: 100%;
+  max-width: 558px;
   max-height: 278px;
   display: block;
   position: relative;
+ @media (max-width: 550px) {
+   width: 300px;
+   height: 151px;
+ }
 }
 
 .portfolio1:after {
@@ -136,6 +135,7 @@ div.portfolio3 {
   position: absolute;
   z-index: 0;
   transition: all 0.5s ease;
+  background-size:contain
 }
 
 .portfolio1:hover:after {
@@ -181,6 +181,7 @@ div.portfolio3 {
 
 }
 
+
 .portfolio3 {
   width: 271px;
   height: 286px;
@@ -213,4 +214,12 @@ div.portfolio3 {
   z-index: 0;
 }
 
+
+
+@media (max-width: 550px) {
+  .portfolio1, .portfolio2 {
+    width: 300px;
+    height: 151px;
+  }
+}
 
