--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -1,3 +1,6 @@
+.team {
+  padding: 0 10px; }
+
 .teamTitle {
   display: block;
   position: relative;
@@ -80,3 +83,10 @@
 
 .socialIcons a {
   margin: 0 5px; }
+
+.teamTitle {
+  color: #222; }
+
+@media (max-width: 550px) {
+  .teamTitle {
+    font-size: 30px; } }
